# nix-ptsname_r-shim

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md  appveyor.yml  circle.yml
ci/: script.sh
src/: lib.rs
