[package]
authors = ["Nelson Chen <nelson.chen@mobivity.com>"]
name = "nix-ptsname_r-shim"
version = "0.1.2"
license = "MIT OR Apache-2.0"
description = "Nix `ptsname_r` shim"
documentation = "https://docs.rs/nix/nix-ptsname_r-shim"
homepage = "https://github.com/Mobivity/nix-ptsname_r-shim"
repository = "https://github.com/Mobivity/nix-ptsname_r-shim"

[dependencies]
nix = "^0.10.0"
